--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -127,7 +127,7 @@
               </p>
             </div>
           </div>
-          <div class="d-flex align-items-center">
+          <div class="arrow-container d-flex align-items-center">
             <a href="#top" class="site-footer-widget-top">
               <img src="{{footer.back2topIcon}}" alt="back-to-top">
               <p>
