--- a/src/_includes/layouts/contact.njk
+++ b/src/_includes/layouts/contact.njk
@@ -4,37 +4,24 @@
 
     <section class="site-contact">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-5">
-            <h1 class="site-contact-title">
-              {{title}}<span>{{subTitle}}</span>
-            </h1>
-          </div>
-          <div class="col-lg-6 ml-auto">
+        <div class="row d-flex justify-content-center ">
             <div class="site-contact-form">
               <h4>{{formTitle}}</h4>
               <form method="POST" action="https://fabform.io/f/ulB_j_f">
                 <div class="row">
                   <div class="col-lg-6">
-                    <input type="text" class="form-control" name="first-name" id="first-name" placeholder="First Name">
+                    <input type="text" class="form-control" name="first-name" id="first-name" placeholder="Prénom">
                   </div>
                   <div class="col-lg-6">
-                    <input type="text" class="form-control" name="last-name" id="last-name" placeholder="Last Name">
+                    <input type="text" class="form-control" name="last-name" id="last-name" placeholder="Nom">
                   </div>
                   <div class="col-lg-6">
                     <input type="email" class="form-control" name="email" id="email" placeholder="Email">
                   </div>
                   <div class="col-lg-6">
-                    <div class="select-wrapper">
-                      <select class="form-control" id="projectType">
-                        <option value="" selected disabled hidden>Project Type</option>
-                        <option value="gd">Graphics Design</option>
-                        <option value="wb">Web Design</option>
-                      </select>
-                    </div>
                   </div>
                   <div class="col-12">
-                    <textarea class="form-control" id="aboutProject" rows="6" placeholder="About the Project"></textarea>
+                    <textarea class="form-control" id="aboutProject" rows="6" placeholder="Votre message içi"></textarea>
                   </div>
                   <div class="col-12">
                     <button type="submit" class="btn btn-primary" formtarget="_blank">
@@ -47,9 +34,6 @@
                   </div>
                 </div>
               </form>
-              <p class="contact-form-generator mt-3">
-                <strong>** </strong><a href="https://fabform.io/" target="_blank">Static website forms</a>
-              </p>
             </div>
           </div>
         </div>
