--- a/src/_includes/layouts/blogDetails.njk
+++ b/src/_includes/layouts/blogDetails.njk
@@ -20,7 +20,7 @@
                 <img class="rev" src="/assets/images/to-top.svg" alt="next project">
                 <span class="link-area">
                   <span data-text="{{previousPost.data.title}}">
-                    Previous Project
+                    Projet précédent
                   </span>
                 </span>
               </a>
@@ -29,7 +29,7 @@
               <a href="{{nextPost.url}}">
                 <span class="link-area">
                   <span data-text="{{nextPost.data.title}}">
-                    Next Project
+                    Projet suivant
                   </span>
                 </span>
                 <img src="/assets/images/to-top.svg" alt="next project">
