--- a/src/_includes/layouts/homepage.njk
+++ b/src/_includes/layouts/homepage.njk
@@ -75,7 +75,9 @@
           <div class="col-lg-6 col-md-10 mx-auto">
             <div class="site-project-item">
               <div class="site-project-item-thumb">
-                <img src="{{portfolio.data.img}}" alt="project-thumb">
+              <a href="{{portfolio.data.page.url}}" class="read-more">
+               <img src="{{portfolio.data.img}}" alt="project-thumb">
+              </a>
               </div>
               <div class="site-project-item-content">
                 <span>{{portfolio.data.subTitle}}</span>
