add new project

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -405,6 +405,13 @@ textarea.form-control {
 .site-blog-post-thumb img {
   width: 100%;
 }
+
+.project-img {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+}
+
 .site-project-item-content,
 .site-blog-post-content {
   position: absolute;
