--- a/src/_includes/layouts/contact.njk
+++ b/src/_includes/layouts/contact.njk
@@ -7,7 +7,7 @@
         <div class="row d-flex justify-content-center ">
             <div class="site-contact-form">
               <h4>{{formTitle}}</h4>
-              <form method="POST" action="https://fabform.io/f/ulB_j_f">
+              <form method="POST" action="https://formspree.io/f/mqkoqkee">
                 <div class="row">
                   <div class="col-lg-6">
                     <input type="text" class="form-control" name="first-name" id="first-name" placeholder="Prénom">
