--- a/src/_includes/layouts/homepage.njk
+++ b/src/_includes/layouts/homepage.njk
@@ -76,7 +76,7 @@
             <div class="site-project-item">
               <div class="site-project-item-thumb">
               <a href="{{portfolio.data.page.url}}" class="read-more">
-               <img src="{{portfolio.data.img}}" alt="project-thumb">
+               <img class="project-img" src="{{portfolio.data.img}}" alt="project-thumb">
               </a>
               </div>
               <div class="site-project-item-content">
