--- a/src/_includes/layouts/portfolio.njk
+++ b/src/_includes/layouts/portfolio.njk
@@ -22,7 +22,7 @@
             <div class="col-lg-6 col-md-10 mx-auto">
               <div class="site-project-item">
                 <div class="site-project-item-thumb">
-                  <img src="{{portfolio.data.img}}" alt="project-thumb">
+                  <img class="project-img" src="{{portfolio.data.img}}" alt="project-thumb">
                 </div>
                 <div class="site-project-item-content">
                   <span>{{portfolio.data.subTitle}}</span>
